# Alembic_Softimage

./: AbcXsi.sln  BuildingAlembic.txt  CMakeLists.txt  GNUmakefile  README.md  README.txt  backup.bat
AbcFramework/: GNUmakefile
AbcFramework/include/: AbcFramework.h  AbcFrameworkCoreAbstractDataType.h  AbcFrameworkDataTypeConverter.h  AbcFrameworkDataTypeExtension.h  AbcFrameworkDataTypes.h  AbcFrameworkDll.h  AbcFrameworkImportedTypes.h  AbcFrameworkLoader.h  AbcFrameworkMem.h  AbcFrameworkPlainOldDataType.h  AbcFrameworkTypedPropertyTraits.h  AbcFrameworkUtil.h  AbcFrameworkVersion.h  CAbcDataTypeHelper.h  CAbcFramework.h  CAbcIPropertyAccessor.h  CAbcIPropertyFactory.h  CAbcInput.h  CAbcInput_Helpers.h  CAbcOArchive.h  CAbcOCamera.h  CAbcOCompoundProperty.h  CAbcOFaceSet.h  CAbcOObject.h  CAbcOObjectFactory.h  CAbcOPoints.h  CAbcOPolyMesh.h  CAbcOProperty.h  CAbcOPropertyFactory.h  CAbcOTypedArrayProperty.h  CAbcOTypedGeomParam.h  CAbcOTypedScalarProperty.h  CAbcOXform.h  CAbcOutput_Helpers.h  CAbcUtils.h  CRefCount.h  IAbcFramework.h  IAbcInput.h  IAbcOProperty.h  IAbcOutput.h
AbcFramework/src/: AbcFramework.def  AbcFramework.vcxproj  AbcFramework.vcxproj.filters  AbcFrameworkDll.cpp  AbcFrameworkMem.cpp  CAbcDataTypeHelper.cpp  CAbcFramework.cpp  CAbcIArchive.cpp  CAbcICamera.cpp  CAbcIFaceSet.cpp  CAbcIPoints.cpp  CAbcIPolyMesh.cpp  CAbcIPropertyAccessor.cpp  CAbcIPropertyFactory.cpp  CAbcISampleSelector.cpp  CAbcIXform.cpp  CAbcInput.cpp  CAbcOArchive.cpp  CAbcOFaceSet.cpp  CAbcOObjectFactory.cpp  CAbcOPoints.cpp  CAbcOPolyMesh.cpp  CAbcOProperty.cpp  CAbcOPropertyFactory.cpp  CAbcOXform.cpp  CAbcTimeSampling.cpp  CAbcUtils.cpp
AbcImportExport/: ABCIMPORTEXPORT.dictxml  AbcImportExport.cpp  AbcImportExport.vcxproj  AbcXsiExportDataTypeConverter.h  AbcXsiExporter.cpp  AbcXsiExporter.h  AbcXsiIO.cpp  AbcXsiIO.h  AbcXsiImporter.cpp  AbcXsiImporter.h  AbcXsiUtils.cpp  AbcXsiUtils.h  ExportHelper.cpp  ExportHelper.h  GNUmakefile  sidictres.h
CMake/Modules/: FindSoftimage.cmake
doc/: config
